--- a/HellBlaster/HellBlaster.csproj
+++ b/HellBlaster/HellBlaster.csproj
@@ -65,8 +65,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Domain\FileReference.cs" />
+    <Compile Include="Domain\VS10Project.cs" />
     <Compile Include="Domain\VS10ProjectReader.cs" />
     <Compile Include="Domain\VS10ProjectWriter.cs" />
+    <Compile Include="Domain\VS10SolutionReader.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
