--- a/HellBlasterTest/testdata/solutionsample/HellBlaster/HellBlasterTest/HellBlasterTest.csproj
+++ b/HellBlasterTest/testdata/solutionsample/HellBlaster/HellBlasterTest/HellBlasterTest.csproj
@@ -51,7 +51,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tests\OpenSolutionFolderTests.cs" />
     <Compile Include="Tests\ProjectReaderTests.cs" />
     <Compile Include="Tests\ReferenceInProjectUpdaterTests.cs" />
     <Compile Include="Tests\ReferenceTests.cs" />
@@ -63,9 +62,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="testdata\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\HellBlaster\HellBlaster.csproj">
       <Project>{D2AB4C1B-7F1A-452A-BE7B-A432C25C8316}</Project>
