--- a/HellBlasterTest/HellBlasterTest.csproj
+++ b/HellBlasterTest/HellBlasterTest.csproj
@@ -57,13 +57,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tests\MainControllerTests.cs" />
-    <Compile Include="Tests\OpenSolutionFolderTests.cs" />
-    <Compile Include="Tests\ProjectReaderTests.cs" />
-    <Compile Include="Tests\ReferenceInProjectUpdaterTests.cs" />
-    <Compile Include="Tests\ReferenceTests.cs" />
-    <Compile Include="Tests\ReferenceUpdaterTests.cs" />
-    <Compile Include="Tests\SolutionReaderTests.cs" />
+    <Compile Include="Tests\Controllers\MainControllerTests.cs" />
+    <Compile Include="Tests\Domain\OpenSolutionFolderTests.cs" />
+    <Compile Include="Tests\Domain\ProjectReaderTests.cs" />
+    <Compile Include="Tests\Domain\ReferenceInProjectUpdaterTests.cs" />
+    <Compile Include="Tests\Domain\ReferenceTests.cs" />
+    <Compile Include="Tests\Domain\ReferenceUpdaterTests.cs" />
+    <Compile Include="Tests\Domain\SolutionReaderTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="libs\Moq.dll" />
