Change namespace for VS10 files

--- a/HellBlaster/HellBlaster.csproj
+++ b/HellBlaster/HellBlaster.csproj
@@ -68,10 +68,10 @@
     </Compile>
     <Compile Include="Controllers\MainPageCtrl.cs" />
     <Compile Include="Domain\FileReference.cs" />
-    <Compile Include="Domain\VS10Project.cs" />
-    <Compile Include="Domain\VS10ProjectReader.cs" />
-    <Compile Include="Domain\VS10ProjectWriter.cs" />
-    <Compile Include="Domain\VS10SolutionReader.cs" />
+    <Compile Include="Domain\VS10\VS10Project.cs" />
+    <Compile Include="Domain\VS10\VS10ProjectReader.cs" />
+    <Compile Include="Domain\VS10\VS10ProjectWriter.cs" />
+    <Compile Include="Domain\VS10\VS10SolutionReader.cs" />
     <Compile Include="Interfaces\IMainPageView.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
