--- a/HellBlaster/HellBlaster.csproj
+++ b/HellBlaster/HellBlaster.csproj
@@ -56,6 +56,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Domain\DiscrepancyDetector.cs" />
     <Compile Include="View\ReferenceList.cs" />
     <Compile Include="View\Reference.cs" />
     <Page Include="MainWindow.xaml">
