The encoding of the generated VS10 project is UTF-8 instead of unicode

--- a/HellBlasterTest/testdata/solutionsample/HellBlaster/HellBlasterTest/HellBlasterTest.csproj
+++ b/HellBlasterTest/testdata/solutionsample/HellBlaster/HellBlasterTest/HellBlasterTest.csproj
@@ -1,12 +1,8 @@
-<?xml version="1.0" encoding="utf-16"?>
-<Project
-  ToolsVersion="4.0"
-  DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <Configuration
-      Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform
-      Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion></ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{40EE51B1-4815-42E8-A42A-8E67B3D20132}</ProjectGuid>
@@ -18,8 +14,7 @@
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
   </PropertyGroup>
-  <PropertyGroup
-    Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -29,8 +24,7 @@
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
-  <PropertyGroup
-    Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -39,67 +33,48 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference
-      Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
-    <Reference
-      Include="nunit.framework, Version=2.7, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="nunit.framework, Version=2.7, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>libs\2.7\nunit.framework.dll</HintPath>
     </Reference>
-    <Reference
-      Include="System" />
-    <Reference
-      Include="System.Core">
+    <Reference Include="System" />
+    <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <CodeAnalysisDependentAssemblyPaths
-      Condition=" '$(VS100COMNTOOLS)' != '' "
-      Include="$(VS100COMNTOOLS)..\IDE\PrivateAssemblies">
+    <CodeAnalysisDependentAssemblyPaths Condition=" '$(VS100COMNTOOLS)' != '' " Include="$(VS100COMNTOOLS)..\IDE\PrivateAssemblies">
       <Visible>False</Visible>
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
-    <Compile
-      Include="Properties\AssemblyInfo.cs" />
-    <Compile
-      Include="Tests\OpenSolutionFolderTests.cs" />
-    <Compile
-      Include="Tests\ProjectReaderTests.cs" />
-    <Compile
-      Include="Tests\ReferenceInProjectUpdaterTests.cs" />
-    <Compile
-      Include="Tests\ReferenceTests.cs" />
-    <Compile
-      Include="Tests\ReferenceUpdaterTests.cs" />
-    <Compile
-      Include="Tests\SolutionReaderTests.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tests\OpenSolutionFolderTests.cs" />
+    <Compile Include="Tests\ProjectReaderTests.cs" />
+    <Compile Include="Tests\ReferenceInProjectUpdaterTests.cs" />
+    <Compile Include="Tests\ReferenceTests.cs" />
+    <Compile Include="Tests\ReferenceUpdaterTests.cs" />
+    <Compile Include="Tests\SolutionReaderTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content
-      Include="libs\nunit.framework.dll">
+    <Content Include="libs\nunit.framework.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content
-      Include="testdata\solutionsample\HellBlaster\HellBlaster.sln" />
-    <Content
-      Include="testdata\solutionsample\HellBlaster\HellBlasterTest\HellBlasterTest.csproj">
+    <Content Include="testdata\solutionsample\HellBlaster\HellBlaster.sln" />
+    <Content Include="testdata\solutionsample\HellBlaster\HellBlasterTest\HellBlasterTest.csproj">
       <SubType>Designer</SubType>
     </Content>
-    <Content
-      Include="testdata\solutionsample\HellBlaster\HellBlaster\HellBlaster.csproj" />
+    <Content Include="testdata\solutionsample\HellBlaster\HellBlaster\HellBlaster.csproj" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <ProjectReference
-      Include="..\HellBlaster\HellBlaster.csproj">
+    <ProjectReference Include="..\HellBlaster\HellBlaster.csproj">
       <Project>{D2AB4C1B-7F1A-452A-BE7B-A432C25C8316}</Project>
       <Name>HellBlaster</Name>
     </ProjectReference>
   </ItemGroup>
-  <Import
-    Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
