--- a/HellBlaster/HellBlaster.csproj
+++ b/HellBlaster/HellBlaster.csproj
@@ -57,6 +57,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Domain\DiscrepancyDetector.cs" />
+    <Compile Include="Domain\StringWriterWithEncoding.cs" />
     <Compile Include="View\ReferenceList.cs" />
     <Compile Include="View\Reference.cs" />
     <Page Include="MainWindow.xaml">
