--- a/HellBlasterTest/HellBlasterTest.csproj
+++ b/HellBlasterTest/HellBlasterTest.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\Controllers\MainControllerTests.cs" />
     <Compile Include="Tests\Domain\DiscrepancyDetectorTests.cs" />
+    <Compile Include="Tests\Domain\VersionRetrieverTests.cs" />
     <Compile Include="Tests\Domain\VS10\OpenSolutionFolderTests.cs" />
     <Compile Include="Tests\Domain\VS10\ProjectReaderTests.cs" />
     <Compile Include="Tests\Domain\VS10\ReferenceInProjectUpdaterTests.cs" />
@@ -76,6 +77,7 @@
       <SubType>Designer</SubType>
     </Content>
     <Content Include="testdata\solutionsample\HellBlaster\HellBlaster\HellBlaster.csproj" />
+    <Content Include="testdata\VersionRetrieverFiles\Textfile.txt" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
