--- a/HellBlaster/HellBlaster.csproj
+++ b/HellBlaster/HellBlaster.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Domain\StringWriterWithEncoding.cs" />
     <Compile Include="Domain\VersionRetriever.cs" />
     <Compile Include="Interfaces\IVersionRetriever.cs" />
+    <Compile Include="View\DiscrepancyColorConverter.cs" />
     <Compile Include="View\ReferenceList.cs" />
     <Compile Include="View\Reference.cs" />
     <Page Include="MainWindow.xaml">
